button toolbar overflow fixes

--- a/hosting/src/app/pages/articles/details/details.component.scss
+++ b/hosting/src/app/pages/articles/details/details.component.scss
@@ -1,13 +1,20 @@
 :host {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
 }
 
 main {
   width: calc(100% - 16px);
   max-width: 800px;
   margin: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.mat-chip-list {
+  width: 100%;
 }
 
 .mat-toolbar {
