--- a/hosting/src/app/pages/images/details/details.component.scss
+++ b/hosting/src/app/pages/images/details/details.component.scss
@@ -7,8 +7,22 @@
 main {
   width: calc(100% - 16px);
   max-width: 800px;
+  margin: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 img {
   max-width: 100%;
+}
+
+.fab-container {
+  position: sticky;
+  z-index: 1;
+  bottom: 16px;
+
+  a {
+    margin: 8px;
+  }
 }
